# pdf-excel-matcher

./: .gitignore  DISTRIBUTION.md  LICENSE.txt  README.md  gui.py  main.py  pdf-excel-annotator.iss  pdf-excel-annotator.spec  pyproject.toml  requirements.txt  tutorial.txt
.github/workflows/: auto-draft.yml  build.yml  create-release.yml  release.yml
pdf_excel_annotator/: __init__.py  cli.py  config.py  excel_reader.py  gui_helpers.py  matcher.py  pdf_annotator.py  pdf_reader.py  pipeline.py  report.py  updater.py  utils.py  version.py
testing-results/apollo/: testing-result.txt
testing-results/apollo/input/: apollo.xlsx
testing-results/apollo/output/: report.txt
testing-results/lennusalga/: testing-result.txt
testing-results/lennusalga/input/: Lennusalga.xlsx
testing-results/lennusalga/output/: report.txt
testing-results/telliskivi/: testing-result.txt
testing-results/telliskivi/input/: Telliskivi.xlsx
testing-results/telliskivi/output/: report.txt
tests/: test_excel_reader.py  test_matcher.py  test_pdf_reader.py  test_report.py  test_updater.py  test_utils.py
